--- a/index.html
+++ b/index.html
@@ -5469,9 +5469,9 @@
                     <div id="element_41_loop">
                         <div class="el_type_text" id="element_41">
                             <div id="element_text_41"><span class="el_text dynva"><a class="text_link_0"
-                                        href="http://privacy-policy.html/">Privacy Policy</a> <span
+                                        href="http:/pressreleases.github.co/privacy-policy/">Privacy Policy</a> <span
                                         style="color: rgb(40, 50, 78);">|</span> <a class="text_link_0"
-                                        href="http://disclaimer.html/">Disclaimer</a></>
+                                        href="http:/pressreleases.github.co/disclaimer/">Disclaimer</a></>
                             </div>
                         </div>
                     </div>
